--- a/LensaKata-with-Bootstrap/css/style.css
+++ b/LensaKata-with-Bootstrap/css/style.css
@@ -23,6 +23,71 @@ h1, h2, h3, h4, p {
     color: white !important;
 }
 
+.navbar-custom {
+    background-color: #2c5a99;
+    height: 9vh;
+    border-radius: 20px;
+    margin-top: 20px; 
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* custom style logo navbar */
+.navbar-brand {
+    font-size: 24px;
+    color: white;
+    font-weight: bold;
+    padding-left: 20px;
+    --bs-navbar-brand-hover-color: #dbdbdb; /
+}
+
+/* style untuk link di navbar */
+.nav-link {
+    color: white;
+    font-weight: bold;
+}
+
+/* hover navbar */
+.nav-link:hover {
+    color: #dbdbdb; 
+}
+
+.dropdown-menu-custom {
+    left: auto;
+    right: 0;
+    max-width: 200px;
+    overflow: visible;
+  }
+  
+  .dropdown-item {
+    padding: 10px 15px; 
+    white-space: normal;
+  }
+
+/* Responsive Setting */
+@media (max-width: 768px) {
+    .navbar-collapse {
+        background-color: #3b5998; 
+        border-radius: 20px;
+        padding: 15px;
+        margin-top: 10px;
+    }
+  
+    .navbar-custom .dropdown-menu {
+        background-color: transparent;
+        border: none;
+    }
+  
+    .navbar-custom .nav-link {
+        color: white;
+    }
+  }
+
 /* First impression */
 .first-impression {
     background-color: white;
