--- a/ghina/LensaKata_Django/LensaKata/LensaKata_App/templates/home/home.html
+++ b/ghina/LensaKata_Django/LensaKata/LensaKata_App/templates/home/home.html
@@ -41,7 +41,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="game.html">Petualangan Kata</a>
+                  <a class="dropdown-item" href="{% url 'game' %}">Petualangan Kata</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="games/pulau_kata.html">Pulau Kata</a>
@@ -55,7 +55,7 @@
               </ul>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link text-secondary-custom" href="login.html">Masuk</a>
+              <a class="nav-link text-secondary-custom" href="{% url 'login' %}">Masuk</a>
             </li>
             <li class="nav-item mx-1 text-center">
               <a class="nav-link text btn btn-cs btn-outline-success px-4" href="#">Langganan</a>
