--- a/LensaKata_Django/LensaKata/LensaKata_App/templates/home/home.html
+++ b/LensaKata_Django/LensaKata/LensaKata_App/templates/home/home.html
@@ -24,7 +24,7 @@
               Edukasi berbasis gamifikasi yang berfokus pada pengembangan
               literasi anak-anak
             </p>
-            <a href="{% url 'game2' pk=1 %}" class="btn-custom text-primary-custom fs-4" style="text-decoration: none">Main Yuk</a>
+            <a href="" class="btn-custom text-primary-custom fs-4" style="text-decoration: none">Main Yuk</a>
           </div>
 
           <!-- Kolom untuk Gambar -->
