tampilan login di perbaiki

--- a/LensaKata_Django/LensaKata/LensaKata_App/templates/account/login.html
+++ b/LensaKata_Django/LensaKata/LensaKata_App/templates/account/login.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="fluid-container">
         <div class="forms-container">
             <div class="signin-signup">
                 <!-- Login Form -->
