--- a/LensaKata_Django/LensaKata/LensaKata_App/static/css/form.css
+++ b/LensaKata_Django/LensaKata/LensaKata_App/static/css/form.css
@@ -32,7 +32,7 @@ input {
   font-family: "Poppins", sans-serif;
 }
 
-.container {
+.fluid-container {
   position: relative;
   width: 100%;
   background-color: #fff;
@@ -184,7 +184,7 @@ form.sign-in-form {
   content: "";
   position: absolute;
   height: 2000px;
-  width: 2000px;
+  width: 100%px;
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
