--- a/LensaKata_Django/LensaKata/LensaKata/LensaKata_App/templates/home/home.html
+++ b/LensaKata_Django/LensaKata/LensaKata/LensaKata_App/templates/home/home.html
@@ -92,10 +92,10 @@
               <div class="container-icon container-icon-3">
                 <div class="container-title">
                   <img src="{% static 'Img/ph_puzzle-piece-fill 3.svg' %}" alt="icon-key" />
-                  <h3>Mabar</h3>
+                  <h3>SPOK</h3>
                   <p>
-                    Diskusi dan Bertualang bersama teman-teman untuk menemukan
-                    dan membuat kisah!
+                    Susun kalimat dengan tepat dan kuasai struktur bahasa dengan cara
+                    menyenangkan!
                   </p>
                 </div>
               </div>
