--- a/LenKa-Django/LensaKata/LensaKata_App/templates/base.html
+++ b/LenKa-Django/LensaKata/LensaKata_App/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% block extra_css %}{% endblock %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
@@ -30,7 +31,7 @@
                             <a class="nav-link active text-secondary-custom" href="{% url 'home' %}">Beranda</a>
                         </li>
                         <li class="nav-item mx-1">
-                            <a class="nav-link text-secondary-custom" href="#">Tentang Kami</a>
+                            <a class="nav-link text-secondary-custom" href="{% url 'tentang-kami'%}">Tentang Kami</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-secondary-custom" href="#" role="button"
@@ -77,7 +78,7 @@
                         <li class="nav-item mx-1 text-center">
                             {% if user.is_authenticated %}
                             <a class="nav-link text-primary-custom btn btn-cs btn-outline-success px-4"
-                                href="{% url 'subscription' %}">Langganan</a>
+                                href="{% url 'langganan' %}">Langganan</a>
                             {% else %}
                             <a class="nav-link text-primary-custom btn btn-cs btn-outline-success px-4"
                                 href="{% url 'account_signup' %}">Registrasi</a>
